# diamond-square

./: Cargo.toml  LICENSE  README.md
benches/: generate.rs
examples/: generate.rs  print.rs
src/: lib.rs  main.rs  terrain.rs
