[package]
name = "diamond-square"
version = "0.1.0"
authors = ["evuez <helloevuez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", features = ["small_rng"] }
ansi_term = "0.12.1"
image = "*"
